# META_HARNESS

./: .coveragerc  .gitignore  .jcodemunch.jsonc  AGENTS.md  README.md  __init__.py  _first146.txt  _half1.txt  _q1.txt  _upto_diag1.txt  agent.py  cli.py  config.py  conftest.py  coverage_policy.py  cursor_client.py  cycle.py  daemon.py  dashboard.py  diagnoser.py  directive_confidence.py  embedding_retrieval.py  evidence.py  git_kg_sync.py  knowledge_graph.py  memory.py  metaharness.toml  metrics.json  multi_project.py  platform_runtime.py  product_agent.py  proposer.py  pyproject.toml  research.py  rollback.py  slack_integration.py  vision.py
.serena/: project.yml
docs/: ANIMAs_META_HARNESS_EXAMPLE.md  CURRENT_SOURCE_BUNDLE.txt  MULTI_PROJECT.md  Meta-Harness_Operations_Reference.md  PROJECT_OVERVIEW.md  TEAM_DIRECTION_BRIEF.md
scripts/: fix_memory_duplicates.py  fix_p7p8_dupes.py  generate_metrics.py  kg_sync_manual.py  run_cycle.bat  run_cycle.sh
templates/: git-hook-post-commit.toml  metaharness-projects.toml  metaharness.toml
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_config.py  test_conftest_coverage_registration.py  test_consolidated_fixes.py  test_coverage_policy.py  test_coveragerc_layout.py  test_critical_coverage_boost.py  test_cursor_client.py  test_cycle.py  test_daemon.py  test_dashboard.py  test_dashboard_redesign.py  test_diagnoser.py  test_directive_confidence.py  test_embedding_retrieval.py  test_encoding.py  test_evidence.py  test_generate_metrics.py  test_git_kg_sync.py  test_knowledge_graph.py  test_memory.py  (+9 more)
(+2 files in other folders)
